--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             data-aos="fade-up"
             data-aos-delay="300"
             data-aos-duration="1000"
-            src="images/1739293386422 (1).jpg"
+            src="images/profile-pic (2).png"
             alt="Profile Picture"
             class="profile-pic"
           />
